worked on report

--- a/beta/chapter1.tex
+++ b/beta/chapter1.tex
@@ -90,6 +90,8 @@ describe or model information that is implemented in web
 resources\footnote{More detailed information about RDF in the ‘Background’
 section}.
 
+\subsection*{RDFa} Resource Description Framework - in - attributes (RDFa) provides a syntax, which basically is a set of attributes to for expressing RDF properties in HTML, XHTML and XML documents.
+
 \subsection*{UTF-8} A encoding that can represent every character in the
 Unicode character set. UTF-8 has become the dominant character encoding for
 the World-Wide Web.
